# claude-cfo

./: .coverage  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  README.md  app.py  llms.txt  pyproject.toml  setup_hf_token.py
.github/workflows/: deploy-hf.yml  test.yml
.omc/: project-memory.json
.omc/plans/: architecture-doc.md  e2e-tests.md  open-questions.md  ux-improvements-hierarchical-edital.md
.omc/state/: agent-replay-e0dc9b34-8082-4fff-9312-221b48052653.jsonl  hud-state.json  hud-stdin-cache.json  idle-notif-cooldown.json  last-tool-error.json  subagent-tracking.json
docs/: architecture.md  contributing.md
docs/plans/: 2026-03-06-sidebar-filtros-design.md
tests/: __init__.py
tests/e2e/: README.md  __init__.py  conftest.py  test_edge_cases.py  test_filters.py  test_topic_checkboxes.py
tests/integration/: test_full_flow.py
tests/unit/: test_calculations.py  test_filters.py  test_progress.py
