[project]
name = "pmdf-estudos"
version = "0.1.0"
description = "Dashboard de estudos PMDF CFO 2025"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.32.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov>=4.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]
